--- a/LightBall-Interface/sytle.css
+++ b/LightBall-Interface/sytle.css
@@ -12,27 +12,71 @@
     transform: translate(-50%,-50%);
 } */
 
+h1{
+    font-size: 26px;
+}
+
+.main{
+    margin: 30px;
+}
+
 .area{
     /* background:#ee8138; */
-    position: absolute;
+    position: relative;
+    float: left;
 }
 
 .area p{
     font-size: 30px;
 }
 
+/* top left */
 .a1{
-    top: 5%;
-    left: 50%;
-    transform: translate(-50%,0);
+    top: 1%;
+    left: 5%;
+    transform: translate(0,0);
+    width: 30%;
+    height: 50%;
+    display: flex;
+    justify-content: left;
+    flex-wrap: wrap;
+    border: orange 2px solid;
+}
+
+
+/* top middle */
+.a2{
+    top: 3%;
+    left: 5%;
+    width: 30%;
+    height: 50%;
+    transform: translate(0,0);
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    border: orange 2px solid;
 }
 
-.a2{
-    bottom: 5%;
-    width: 100%;
+/* top right */
+.a3{
+    top: 3%;
+    left: 5%;
+    width: 30%;
+    height: 50%;
+    display: flex;
+    text-align: right;
+    justify-content: flex-end;
+    flex-wrap: wrap;
+    border: orange 2px solid;
+}
+
+/* button */
+.a4{
+    position: absolute;
+    transform: translate(-50%,0);
+    bottom: 3%;
+    left: 50%;
+    width: 98%;
     text-align: center;
 }
 
@@ -41,15 +85,12 @@
     background: #2c3e50;
     border: 2px solid white;
     margin: 4px;
-    width: 200px;
+    width: 250px;
     height: 200px;
     text-align: center;
     float: left;
 }
 
-.b1{
-    width: 412px;
-}
 
 .block input[type="button"]{
     background: none;
@@ -80,7 +121,7 @@
     border: white 1px solid;
     border-radius: 10px;
     padding: 5px;
-    width: 500px;
+    width: 800px;
     text-align: center;
     color: white;
     left: 50%;
@@ -103,6 +144,11 @@
 .btn:hover{
     transform: scale(1.2);
     cursor: pointer;
+}
+
+#time{
+    position: absolute;
+    right: 0%; 
 }
 
 .waver-player{
